--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-jwt:
-  secret: asds12312
-
 spring:
   datasource:
     url: jdbc:h2:mem:testdb
@@ -17,3 +14,5 @@ logging:
     slf4j: info
     root: info
 
+server:
+  port: 3000
